# ai-design-patterns

./: .gitignore  README.md  example.env  main.py  pyproject.toml
src/ai_design_patterns/: main.py
src/ai_design_patterns/chapter_1/prompt_chaining/: haystack_prompt_chaining.py  langchain_prompt_chaining.py  product_model.py
src/ai_design_patterns/data_models/: extract_model.py
src/ai_design_patterns/parallel/: langchain_parallel.py
src/ai_design_patterns/planning/plan_n_execute/: llm.py  main.py  planner.py  state.py
src/ai_design_patterns/prompt_chaining/: README.md
src/ai_design_patterns/reflection/: langchain_reflection.py
src/ai_design_patterns/routing/: LCEL_langchain_routing.py  SPECS.md
src/ai_design_patterns/tool_use/: langchain_tools.py  tools.py
