[project]
name = "ai-design-patterns"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "haystack-ai>=2.21.0",
    "ipykernel>=7.1.0",
    "langchain-community>=0.4.1",
    "langchain-ollama>=1.0.1",
    "langchain-tavily>=0.2.16",
    "langchain[openai]>=1.2.0",
    "langgraph>=1.0.5",
    "langsmith>=0.5.0",
    "pydantic>=2.12.5",
    "pypdf>=6.5.0",
    "python-dotenv>=1.2.1",
    "tavily-python>=0.7.17",
]


[build-system]
requires = ["uv_build>=0.9.15,<0.10.0"]
build-backend = "uv_build"
